[tool.poetry]
name = 'Roboverse'
version = '0.0.0.dev0'

description = 'Robotics Metaverse'

license = 'MIT'

authors = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>'
]
maintainers = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>'
]

readme = 'README.md'

homepage = 'https://GitHub.com/Mindstem/Roboverse'
repository = 'https://GitHub.com/Mindstem/Roboverse'
documentation = 'https://Mindstem.GitHub.io/Roboverse'

keywords = [
  'Robotics',
  'robot',
  'robots',

  'Artificial Intelligence',
  'A.I.',
  'AI',

  'metaverse',
]

classifiers = [
  'Development Status :: 3 - Alpha',
  # 'Development Status :: 4 - Beta',
  # 'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Manufacturing',
  'Intended Audience :: Science/Research',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Education',
  'Topic :: Home Automation',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Human Machine Interfaces',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Visualization',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Software Development :: User Interfaces',
  'Topic :: Software Development :: Widget Sets',
]

packages = [
  {include = 'roboverse', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]

# PYTHON
# ======
Python = '>= 3.10, < 4'


[tool.poetry.dev-dependencies]
Commitizen = '^2.20.3'
Pre-Commit = '^2.16.0'


[tool.poetry.scripts]


[tool.poetry.extras]
doc = [
  # Sphinx & related
  'Sphinx >= 4.3.2',
  'Sphinx-AutoBuild >= 2021.3.14',
  'SphinxContrib-JSMath >= 1.0.1',

  # Markdown
  'CommonMark >= 0.9.1',
  'MyST-Parser >= 0.16.1',
  'ReCommonMark >= 0.7.1',
]

lint = [
  'Bandit >= 1.7.1',
  'Flake8 >= 4.0.1',
  'MyPy >= 0.930',
  'Prospector >= 1.5.3.1',
  'PyCodeStyle >= 2.8.0',
  'PyDocStyle >= 6.1.1',
  'PyLama >= 8.3.6',
  'PyLint >= 2.12.2',

  'Black >= 21.12',
]

test = [
  'Nose >= 1.3.7',
  'Nose2 >= 0.10.0',
  'PyTest >= 6.2.5',
  'UnitTest2 >= 1.1.0',
]


[tool.poetry.plugins]

[tool.poetry.plugins."blogtool.parsers"]


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Mindstem/Roboverse'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7',

  # *** TEMP FIX for SetUpTools-related bug ***
  # github.com/pypa/pip/issues/10743#issuecomment-998321115
  # github.com/python-poetry/poetry/issues/3153#issuecomment-727196619
  # github.com/python-poetry/poetry/issues/4915#issuecomment-999449889
  'SetUpTools >= 60.1.0',
]
build-backend = 'poetry.core.masonry.api'
